--- a/README
+++ b/README
@@ -1,4 +1,12 @@
-This is the source for the Attic website: source markup in xdocs/, HTML results of build.sh in docs/.
+This is the source for the Attic website https://attic.apache.org/
+- source markup in xdocs/
+- HTML results of build.sh in docs/
+
+Maintained at https://svn.apache.org/repos/asf/attic/site / https://svn.apache.org/viewvc/attic/site/
+with a Git read-only mirror at https://github.com/apache/attic-site
+
+Issue tracking: https://issues.apache.org/jira/projects/ATTIC
+Mailing list: general@attic.apache.org https://lists.apache.org/list.html?general@attic.apache.org
 
 It is automatically built by buildbot on changes: https://ci2.apache.org/#/builders/16
 
